chg: delete POST on /users
